--- a/a1/Notes.ipynb
+++ b/a1/Notes.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -149,26 +149,52 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "Things I have tried:\n",
-    "\n",
-    "- cost\n",
-    "- training_cost\n",
-    "- train_cost\n",
-    "- training_dataset_cost\n",
-    "- cost_simple_xentropy\n",
-    "- training_cost_simple_xentropy\n",
-    "- train_cost_simple_xentropy\n",
-    "- training_dataset_cost_simple_xentropy"
+    "DataStreamMonitoring?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorType(float64, scalar)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cost.type"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -176,95 +202,39 @@
      "output_type": "stream",
      "text": [
       "Using saved session configuration for http://localhost:5006/\n",
-      "To override, pass 'load_from_config=False' to Session\n",
-      "\n",
-      "-------------------------------------------------------------------------------\n",
-      "BEFORE FIRST EPOCH\n",
-      "-------------------------------------------------------------------------------\n",
-      "Training status:\n",
-      "\t batch_interrupt_received: False\n",
-      "\t epoch_interrupt_received: False\n",
-      "\t epoch_started: True\n",
-      "\t epochs_done: 0\n",
-      "\t iterations_done: 0\n",
-      "\t received_first_batch: False\n",
-      "\t resumed_from: None\n",
-      "\t training_started: True\n",
-      "Log records from the iteration 0:\n",
-      "\t test_cost_simple_xentropy: 0.6839752156045804\n",
-      "\t test_error_rate: 0.11816838995568685\n",
-      "\n",
-      "\n",
-      "-------------------------------------------------------------------------------\n",
-      "AFTER ANOTHER EPOCH\n",
-      "-------------------------------------------------------------------------------\n",
-      "Training status:\n",
-      "\t batch_interrupt_received: False\n",
-      "\t epoch_interrupt_received: False\n",
-      "\t epoch_started: False\n",
-      "\t epochs_done: 1\n",
-      "\t iterations_done: 305\n",
-      "\t received_first_batch: True\n",
-      "\t resumed_from: None\n",
-      "\t training_started: True\n",
-      "Log records from the iteration 305:\n",
-      "\t test_cost_simple_xentropy: 0.6233611621447643\n",
-      "\t test_error_rate: 0.11816838995568685\n",
-      "\n",
-      "\n",
-      "-------------------------------------------------------------------------------\n",
-      "AFTER ANOTHER EPOCH\n",
-      "-------------------------------------------------------------------------------\n",
-      "Training status:\n",
-      "\t batch_interrupt_received: False\n",
-      "\t epoch_interrupt_received: False\n",
-      "\t epoch_started: False\n",
-      "\t epochs_done: 2\n",
-      "\t iterations_done: 610\n",
-      "\t received_first_batch: True\n",
-      "\t resumed_from: None\n",
-      "\t training_started: True\n",
-      "Log records from the iteration 610:\n",
-      "\t test_cost_simple_xentropy: 0.6165014315330757\n",
-      "\t test_error_rate: 0.11816838995568685\n",
-      "\n",
-      "\n",
-      "-------------------------------------------------------------------------------\n",
-      "AFTER ANOTHER EPOCH\n",
-      "-------------------------------------------------------------------------------\n",
-      "Training status:\n",
-      "\t batch_interrupt_received: False\n",
-      "\t epoch_interrupt_received: False\n",
-      "\t epoch_started: False\n",
-      "\t epochs_done: 3\n",
-      "\t iterations_done: 915\n",
-      "\t received_first_batch: True\n",
-      "\t resumed_from: None\n",
-      "\t training_started: True\n",
-      "Log records from the iteration 915:\n",
-      "\t test_cost_simple_xentropy: 0.5724967782954767\n",
-      "\t test_error_rate: 0.11767602166420482\n",
-      "\t training_finish_requested: True\n",
-      "\n",
-      "\n",
-      "-------------------------------------------------------------------------------\n",
-      "TRAINING HAS BEEN FINISHED:\n",
-      "-------------------------------------------------------------------------------\n",
-      "Training status:\n",
-      "\t batch_interrupt_received: False\n",
-      "\t epoch_interrupt_received: False\n",
-      "\t epoch_started: False\n",
-      "\t epochs_done: 3\n",
-      "\t iterations_done: 915\n",
-      "\t received_first_batch: True\n",
-      "\t resumed_from: None\n",
-      "\t training_started: True\n",
-      "Log records from the iteration 915:\n",
-      "\t test_cost_simple_xentropy: 0.5724967782954767\n",
-      "\t test_error_rate: 0.11767602166420482\n",
-      "\t training_finish_requested: True\n",
-      "\t training_finished: True\n",
-      "\n"
+      "To override, pass 'load_from_config=False' to Session\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/quickbeam/ilia_dev/python/miniconda/envs/py3-deep-learning/lib/python3.5/site-packages/bokeh/session.py:318: UserWarning: You need to start the bokeh-server to see this example.\n",
+      "  warnings.warn(\"You need to start the bokeh-server to see this example.\")\n"
+     ]
+    },
+    {
+     "ename": "ConnectionError",
+     "evalue": "HTTPConnectionPool(host='localhost', port=5006): Max retries exceeded with url: /bokeh/userinfo/ (Caused by NewConnectionError('<requests.packages.urllib3.connection.HTTPConnection object at 0xa6a27a6c>: Failed to establish a new connection: [Errno 111] Connection refused',))",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[0;32m\"<ipython-input-7-d7de8104f107>\"\u001b[0m, line \u001b[0;32m12\u001b[0m, in \u001b[0;35m<module>\u001b[0m\n    Plot(\"Example Plot\", channels=[['test_cost_simple_xentropy', \"test_error_rate\"]])\n",
+      "  File \u001b[0;32m\"/home/quickbeam/ilia_dev/python/miniconda/envs/py3-deep-learning/lib/python3.5/site-packages/blocks_extras-0.0.0-py3.5.egg/blocks_extras/extensions/plot.py\"\u001b[0m, line \u001b[0;32m189\u001b[0m, in \u001b[0;35m__init__\u001b[0m\n    super(Plot, self).__init__(document_name, **kwargs)\n",
+      "  File \u001b[0;32m\"/home/quickbeam/ilia_dev/python/miniconda/envs/py3-deep-learning/lib/python3.5/site-packages/blocks_extras-0.0.0-py3.5.egg/blocks_extras/extensions/plot.py\"\u001b[0m, line \u001b[0;32m63\u001b[0m, in \u001b[0;35m__init__\u001b[0m\n    self._setup_document(clear_document)\n",
+      "  File \u001b[0;32m\"/home/quickbeam/ilia_dev/python/miniconda/envs/py3-deep-learning/lib/python3.5/site-packages/blocks_extras-0.0.0-py3.5.egg/blocks_extras/extensions/plot.py\"\u001b[0m, line \u001b[0;32m79\u001b[0m, in \u001b[0;35m_setup_document\u001b[0m\n    self.session.use_doc(self.document_name)\n",
+      "  File \u001b[0;32m\"/home/quickbeam/ilia_dev/python/miniconda/envs/py3-deep-learning/lib/python3.5/site-packages/bokeh/session.py\"\u001b[0m, line \u001b[0;32m455\u001b[0m, in \u001b[0;35muse_doc\u001b[0m\n    self.docid = self.find_doc(name)\n",
+      "  File \u001b[0;32m\"/home/quickbeam/ilia_dev/python/miniconda/envs/py3-deep-learning/lib/python3.5/site-packages/bokeh/session.py\"\u001b[0m, line \u001b[0;32m418\u001b[0m, in \u001b[0;35mfind_doc\u001b[0m\n    docs = self.userinfo.get('docs')\n",
+      "  File \u001b[0;32m\"/home/quickbeam/ilia_dev/python/miniconda/envs/py3-deep-learning/lib/python3.5/site-packages/bokeh/session.py\"\u001b[0m, line \u001b[0;32m373\u001b[0m, in \u001b[0;35muserinfo\u001b[0m\n    self._userinfo = self.get_json(url)\n",
+      "  File \u001b[0;32m\"/home/quickbeam/ilia_dev/python/miniconda/envs/py3-deep-learning/lib/python3.5/site-packages/bokeh/session.py\"\u001b[0m, line \u001b[0;32m351\u001b[0m, in \u001b[0;35mget_json\u001b[0m\n    return self.execute_json('get', url, headers=headers, **kwargs)\n",
+      "  File \u001b[0;32m\"/home/quickbeam/ilia_dev/python/miniconda/envs/py3-deep-learning/lib/python3.5/site-packages/bokeh/session.py\"\u001b[0m, line \u001b[0;32m334\u001b[0m, in \u001b[0;35mexecute_json\u001b[0m\n    resp = self.execute(method, url, headers=headers, **kwargs)\n",
+      "  File \u001b[0;32m\"/home/quickbeam/ilia_dev/python/miniconda/envs/py3-deep-learning/lib/python3.5/site-packages/bokeh/session.py\"\u001b[0m, line \u001b[0;32m319\u001b[0m, in \u001b[0;35mexecute\u001b[0m\n    raise e\n",
+      "  File \u001b[0;32m\"/home/quickbeam/ilia_dev/python/miniconda/envs/py3-deep-learning/lib/python3.5/site-packages/bokeh/session.py\"\u001b[0m, line \u001b[0;32m316\u001b[0m, in \u001b[0;35mexecute\u001b[0m\n    resp = func(url, headers=headers, **kwargs)\n",
+      "  File \u001b[0;32m\"/home/quickbeam/ilia_dev/python/miniconda/envs/py3-deep-learning/lib/python3.5/site-packages/requests/sessions.py\"\u001b[0m, line \u001b[0;32m480\u001b[0m, in \u001b[0;35mget\u001b[0m\n    return self.request('GET', url, **kwargs)\n",
+      "  File \u001b[0;32m\"/home/quickbeam/ilia_dev/python/miniconda/envs/py3-deep-learning/lib/python3.5/site-packages/requests/sessions.py\"\u001b[0m, line \u001b[0;32m468\u001b[0m, in \u001b[0;35mrequest\u001b[0m\n    resp = self.send(prep, **send_kwargs)\n",
+      "  File \u001b[0;32m\"/home/quickbeam/ilia_dev/python/miniconda/envs/py3-deep-learning/lib/python3.5/site-packages/requests/sessions.py\"\u001b[0m, line \u001b[0;32m576\u001b[0m, in \u001b[0;35msend\u001b[0m\n    r = adapter.send(request, **kwargs)\n",
+      "\u001b[1;36m  File \u001b[1;32m\"/home/quickbeam/ilia_dev/python/miniconda/envs/py3-deep-learning/lib/python3.5/site-packages/requests/adapters.py\"\u001b[1;36m, line \u001b[1;32m437\u001b[1;36m, in \u001b[1;35msend\u001b[1;36m\u001b[0m\n\u001b[1;33m    raise ConnectionError(e, request=request)\u001b[0m\n",
+      "\u001b[1;31mConnectionError\u001b[0m\u001b[1;31m:\u001b[0m HTTPConnectionPool(host='localhost', port=5006): Max retries exceeded with url: /bokeh/userinfo/ (Caused by NewConnectionError('<requests.packages.urllib3.connection.HTTPConnection object at 0xa6a27a6c>: Failed to establish a new connection: [Errno 111] Connection refused',))\n"
      ]
     }
    ],
