For convenience moves all imports into "workspace" file, adjusts imports in some existing code.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -2,41 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Theano stuff\n",
-    "from theano import tensor\n",
-    "\n",
-    "# All sorts of bricks\n",
-    "from blocks.bricks import Linear\n",
-    "from blocks.bricks import NDimensionalSoftmax\n",
-    "from blocks.bricks import Rectifier\n",
-    "from blocks.bricks import Bias\n",
-    "from blocks.bricks.lookup import LookupTable\n",
-    "from blocks.bricks.recurrent import SimpleRecurrent\n",
-    "from blocks.bricks.sequences import Sequence\n",
-    "from blocks.bricks.cost import CategoricalCrossEntropy, MisclassificationRate\n",
-    "# All sorts of blocks\n",
-    "from blocks.graph import ComputationGraph\n",
-    "from blocks.initialization import IsotropicGaussian, Constant\n",
-    "from blocks.algorithms import GradientDescent, Scale, Adam\n",
-    "# Fuel Imports\n",
-    "from fuel.streams import DataStream\n",
-    "from fuel.schemes import SequentialScheme, SequentialExampleScheme\n",
-    "from fuel.datasets import IndexableDataset\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# to make life easier, import all the needed stuff from workspace\n",
+    "# With autoreload enabled this also has the added benefit of making imported functionality\n",
+    "# available to the notebook without the need to rerun the importing cell.\n",
+    "from workspace import *\n",
     "# Below line is supposed to be `from fuel.transformers.sequences import NGrams`...\n",
     "# But it doesn't work :(\n",
-    "from sequences import NGrams\n",
-    "from fuel.transformers import Padding, Mapping, Batch\n",
-    "# Main Loop\n",
-    "from blocks.extensions.monitoring import DataStreamMonitoring\n",
-    "from blocks.main_loop import MainLoop\n",
-    "from blocks.extensions import FinishAfter, Printing\n",
-    "from blocks_extras.extensions.plot import Plot"
+    "from contrib.sequences import NGrams"
    ]
   },
   {
@@ -450,6 +439,93 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Playing with Main Loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from word_embeddings import main_loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "BEFORE FIRST EPOCH\n",
+      "-------------------------------------------------------------------------------\n",
+      "Training status:\n",
+      "\t batch_interrupt_received: False\n",
+      "\t epoch_interrupt_received: False\n",
+      "\t epoch_started: True\n",
+      "\t epochs_done: 0\n",
+      "\t iterations_done: 0\n",
+      "\t received_first_batch: False\n",
+      "\t resumed_from: None\n",
+      "\t training_started: True\n",
+      "Log records from the iteration 0:\n",
+      "\t test_simple_entropy_apply_cost: 5.717057105039682\n",
+      "\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "AFTER ANOTHER EPOCH\n",
+      "-------------------------------------------------------------------------------\n",
+      "Training status:\n",
+      "\t batch_interrupt_received: False\n",
+      "\t epoch_interrupt_received: False\n",
+      "\t epoch_started: False\n",
+      "\t epochs_done: 1\n",
+      "\t iterations_done: 23\n",
+      "\t received_first_batch: True\n",
+      "\t resumed_from: None\n",
+      "\t training_started: True\n",
+      "Log records from the iteration 23:\n",
+      "\t test_simple_entropy_apply_cost: 5.430238805431428\n",
+      "\t training_finish_requested: True\n",
+      "\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "TRAINING HAS BEEN FINISHED:\n",
+      "-------------------------------------------------------------------------------\n",
+      "Training status:\n",
+      "\t batch_interrupt_received: False\n",
+      "\t epoch_interrupt_received: False\n",
+      "\t epoch_started: False\n",
+      "\t epochs_done: 1\n",
+      "\t iterations_done: 23\n",
+      "\t received_first_batch: True\n",
+      "\t resumed_from: None\n",
+      "\t training_started: True\n",
+      "Log records from the iteration 23:\n",
+      "\t test_simple_entropy_apply_cost: 5.430238805431428\n",
+      "\t training_finish_requested: True\n",
+      "\t training_finished: True\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "main_loop.run()"
+   ]
   }
  ],
  "metadata": {
